manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-web
  name: weather-web
  namespace: oz-lab
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app: weather-web
  sessionAffinity: None
