manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: weather-web
  namespace: oz-lab
spec:
  rules:
  - host: weather.lab.teki.sh
    http:
      paths:
      - backend:
          service:
            name: weather-web
            port:
              number: 8080
        path: /
        pathType: Prefix
